--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
             <footer>
                 <p class="pull-xs-right">
                     <small>
-                        <a href="https://github.com/manala/nginx-autoindex-theme">Manala Nginx Autoindex Theme</a>
+                        <a href="https://stinkboys.com">Stink Media</a>
                     </small>
                 </p>
             </footer>
