--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
             <footer>
                 <p class="pull-xs-right">
                     <small>
-                        <a href="https://virbos.xyz">VirbOS</a>
+                        <img src="./images/icons/virbos.png" width="1px"></img><a href="https://virbos.xyz">VirbOS</a>
                     </small>
                 </p>
             </footer>
