--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
             <footer>
                 <p class="pull-xs-right">
                     <small>
-                        <img src="/.theme/images/icons/virbos.png"><a href="https://virbos.xyz"> VirbOS</a>
+                        <a href="https://virbos.xyz"><img src="/.theme/images/icons/virbos.png" width="16px"> VirbOS</a>
                     </small>
                 </p>
             </footer>
